tests/e2e/fail/str_non_bytes.ep
# COMPILE_ERROR: argument 1 of 'str' expects u8[], got i64
fun main(): void {
    let value = str(42)
    os.ExitProcess(len(value))
}
